--- a/themes/port-theme/src/css/portlet/_portlet_custom.scss
+++ b/themes/port-theme/src/css/portlet/_portlet_custom.scss
@@ -16,7 +16,7 @@
 	.portlet-content {
 		border-radius: 0;
 		border-width: 0;
-		padding: 0;
+		padding: 50px 0;
 	}
 
 	.overlay {
@@ -27,7 +27,7 @@
 		@include transition(background 0.2s linear);
 	}
 
-	.portlet-custom {
+	.works-display {
 		margin: 0;
 
 		.heading {
@@ -45,10 +45,6 @@
 		.heading-row {
 			@include display(flex);
 			@include justify-content(space-between);
-		}
-
-		.portlet-content {
-			padding: 0;
 		}
 
 		.card-item {
