--- a/themes/port-theme/src/css/portlet/_portlet_banner.scss
+++ b/themes/port-theme/src/css/portlet/_portlet_banner.scss
@@ -94,13 +94,16 @@
 		padding: 0;
 		text-align: center;
 
-		button {
+		.btn {
 			background-color: #76DCC8;
+			border-width: 0;
 			color: rgba(255, 255, 255, 0.8);
 			margin-top: 30px;
 			@include transition(color 0.2s linear);
 
 			&:hover {
+				background-color: #56ab9a;
+				border-width: 0;
 				color: rgba(255, 255, 255, 1);
 			}
 		}
