Changes from review

--- a/themes/port-theme/src/css/_custom.scss
+++ b/themes/port-theme/src/css/_custom.scss
@@ -51,22 +51,22 @@
 	height: 33px;
 }
 
-.port_1_3_columns {
-	padding: 30px 0;
+// .port_1_3_columns {
+// 	padding: 30px 0;
 
-	.col-sm-12, .col-sm-4 {
-		padding: 0 10px;
-	}
+// 	.col-sm-12, .col-sm-4 {
+// 		padding: 0 10px;
+// 	}
 
-	.portlet-boundary {
-		margin: 0;
-	}
+// 	.portlet-boundary {
+// 		margin: 0;
+// 	}
 
-	@media (max-width: 768px) {
-		margin: 0 auto;
-		max-width: 300px;
-	}
-}
+// 	@media (max-width: 768px) {
+// 		margin: 0 auto;
+// 		max-width: 300px;
+// 	}
+// }
 
 /* Content Styles */
 
