--- a/themes/port-theme/src/css/portlet/_portlet_custom.scss
+++ b/themes/port-theme/src/css/portlet/_portlet_custom.scss
@@ -13,6 +13,10 @@
 		border-top: 2px solid #EEE;
 	}
 
+	.page-header {
+		text-align: center;
+	}
+
 	.portlet-content {
 		border-radius: 0;
 		border-width: 0;
