Modify custom layout

--- a/themes/port-theme/src/css/_custom.scss
+++ b/themes/port-theme/src/css/_custom.scss
@@ -8,6 +8,7 @@
 @import '_custom_fonts';
 @import '_custom_vars';
 @import '_custom_mixins';
+@import '_custom_layouts';
 @import './header/_header';
 @import './portlet/_portlet_custom';
 @import './portlet/_portlet_banner';
