Adjust portlet topper positioning

--- a/themes/port-theme/src/css/portlet/_portlet_custom.scss
+++ b/themes/port-theme/src/css/portlet/_portlet_custom.scss
@@ -21,6 +21,10 @@
 		text-align: center;
 	}
 
+	&:hover .portlet-topper {
+		@include transform(translateY(-32px));
+	}
+
 	.portlet-content {
 		border-radius: 0;
 		border-width: 0;
