--- a/themes/port-theme/src/css/portlet/_portlet_banner.scss
+++ b/themes/port-theme/src/css/portlet/_portlet_banner.scss
@@ -23,12 +23,20 @@
 		width: 200px;
 	}
 
+	&:hover .portlet-topper {
+		@include transform(none);
+	}
+
 	.full-page-banner {
 		@include align-items(center);
+
 		border-radius: 0;
+
 		@include display(flex);
 		@include flex-direction(column);
+
 		height: 100vh;
+
 		@include justify-content(space-between);
 
 		h1, h4 {
@@ -109,6 +117,7 @@
 			border-width: 0;
 			color: rgba(255, 255, 255, 0.8);
 			margin-top: 30px;
+
 			@include transition(color 0.2s linear);
 
 			&:hover {
