--- a/themes/port-theme/src/css/portlet/_portlet_custom.scss
+++ b/themes/port-theme/src/css/portlet/_portlet_custom.scss
@@ -22,6 +22,10 @@
 		text-align: center;
 	}
 
+	.form-control {
+		height: 33px;
+	}
+
 	&:hover .portlet-topper {
 		@include transform(translateY(-32px));
 	}
