Adjust padding and margins

--- a/themes/port-theme/src/css/portlet/_portlet_custom.scss
+++ b/themes/port-theme/src/css/portlet/_portlet_custom.scss
@@ -34,6 +34,7 @@
 		border-radius: 0;
 		border-width: 0;
 		padding: 0;
+		margin: 20px 0;
 	}
 
 	.overlay {
@@ -191,7 +192,7 @@
 	.single-testimonial {
 		display: flex;
 		flex-wrap: wrap;
-		padding: 20px 0;
+		padding: 0;
 
 		h4 {
 			margin: 0 0 10px;
