--- a/themes/port-theme/src/css/portlet/_portlet_custom.scss
+++ b/themes/port-theme/src/css/portlet/_portlet_custom.scss
@@ -33,8 +33,8 @@
 	.portlet-content {
 		border-radius: 0;
 		border-width: 0;
-		padding: 0;
 		margin: 20px 0;
+		padding: 0;
 	}
 
 	.overlay {
@@ -144,10 +144,17 @@
 	}
 
 	.blog-content {
-
-		h1, h2 {}
 		img {
 			margin-bottom: 10px;
+		}
+	}
+
+	.blog-content-preview {
+		overflow: hidden;
+
+		p {
+			height: 50px;
+			text-overflow: ellipsis;
 		}
 	}
 
