Remove card thumbnail ImageURL field

--- a/themes/port-theme/src/css/portlet/_portlet_custom.scss
+++ b/themes/port-theme/src/css/portlet/_portlet_custom.scss
@@ -233,4 +233,8 @@
 	.form-control {
 		border-radius: 0;
 	}
+
+	.thumbnail-cards-default-bg {
+		background-image: url(../images/card_thumbnail.jpg);
+	}
 }
